--- a/gui/pages/_app.css
+++ b/gui/pages/_app.css
@@ -75,7 +75,7 @@ input[type="range"] {
     appearance: none;
     width: 100%;
     height: 8px;
-    background: #28243A;
+    background: #000000;
     outline: none;
     opacity: 1;
     border-radius: 20px;
@@ -138,7 +138,7 @@ input[type="range"]::-moz-range-track {
     content: '\2713';
     position: absolute;
     transform: translateY(-20%);
-    color: #312D44;
+    color: #000000;
     font-weight: 650;
 }
 
@@ -171,7 +171,7 @@ input[type="range"]::-moz-range-track {
 }
 
 .medium_toggle:hover {
-    background: #494856;
+    background: #000000;
 }
 
 .modal {
@@ -187,7 +187,7 @@ input[type="range"]::-moz-range-track {
 }
 
 .modal-content {
-    background-color: #1F1B32;
+    background-color: #000000;
     border-radius: 8px;
     padding: 20px;
     box-shadow: -10px 10px 100px rgba(0, 0, 0, 0.4);
@@ -235,7 +235,7 @@ input[type="range"]::-moz-range-track {
     flex-direction: column;
     align-items: flex-start;
     border-radius: 8px;
-    background: #2E293F;
+    background: #000000;
     box-shadow: -2px 2px 24px rgba(0, 0, 0, 0.4);
     position: absolute;
     width: fit-content;
@@ -246,7 +246,7 @@ input[type="range"]::-moz-range-track {
 .dropdown_container {
     width: 150px;
     height: auto;
-    background: #2E293F;
+    background: #000000;
     flex-direction: column;
     justify-content: center;
     position: absolute;
@@ -323,7 +323,7 @@ input[type="range"]::-moz-range-track {
     border-radius: 8px;
     width: 100%;
     height: 32px;
-    background: #3B3B49;
+    background: #000000;
     border: 1px solid #4A4A55;
     font-style: normal;
     font-weight: 400;
@@ -335,7 +335,7 @@ input[type="range"]::-moz-range-track {
 
 .input_medium:hover, .textarea_medium:hover
 {
-    border: 1px solid #494856;
+    border: 1px solid #000000;
     transition: 0.2s;
 }
 
@@ -347,7 +347,7 @@ input[type="range"]::-moz-range-track {
 {
     transition:0.4s;
     outline: none;
-    border: 1px solid #494856 !important;
+    border: 1px solid #000000 !important;
 }
 
 .textarea_medium
@@ -360,8 +360,8 @@ input[type="range"]::-moz-range-track {
     padding: 5px 12px;
     left: 470px;
     top: 20px;
-    background: #3B3B49;
-    border: 1px solid #4A4A55;
+    background: #000000;
+    border: 1px solid #000000;
     border-radius: 8px;
     font-style: normal;
     font-weight: 400;
@@ -375,11 +375,11 @@ input[type="range"]::-moz-range-track {
 }
 
 .custom_select_container {
-    background-color: #3B3B49;
+    background-color: #000000;
     display: flex;
     align-items: center;
     cursor: pointer;
-    border: 1px solid #4A4A55;
+    border: 1px solid #000000;
     height: fit-content;
     border-radius: 8px;
     font-size: 12px;
@@ -408,12 +408,12 @@ input[type="range"]::-moz-range-track {
 
 .custom_select_container:focus {
     outline: none;
-    border: 1px solid #494856;
+    border: 1px solid #000000;
     float: left;
 }
 
 .custom_select_container:hover {
-    border: 1px solid #494856;
+    border: 1px solid #000000;
     transition: 0.4s ease-in-out;
 }
 
@@ -423,7 +423,7 @@ input[type="range"]::-moz-range-track {
 }
 
 .custom_select_options {
-    background: #2E2C40;
+    background: #000000;
     border: none;
     border-radius: 8px;
     position: absolute;
@@ -463,22 +463,22 @@ input[type="range"]::-moz-range-track {
 }
 
 .custom_select_option:hover, .create_agent_dropdown_options:hover {
-    background: #3B3B49;
+    background: #000000;
     border-radius: 8px;
 }
 
 .custom_select_option:hover {
-    background: #3B3B49;
+    background: #000000;
     border-radius: 8px;
 }
 
 .custom_select_option:active, .create_agent_dropdown_options:active {
-    background: #3B3B49;
+    background: #000000;
     border-radius: 8px;
 }
 
 .create_agent_dropdown_options{
-    background: #3B3B49;
+    background: #000000;
     border-radius: 8px;
     position: absolute;
     top: -40px;
@@ -645,7 +645,7 @@ p {
     height: 100vh;
     width: 100vw;
     display: flex;
-    background-color: #1B192C;
+    background-color: #000000;
 }
 
 .workSpaceStyle {
@@ -659,7 +659,7 @@ p {
 }
 
 .signInStyle {
-    background: #21173A;
+    background: #000000;
     width: 100vw;
     height: 100vh;
 }
@@ -687,7 +687,7 @@ p {
     height: fit-content;
     width: 25vw;
     padding: 25px 20px;
-    background: #3A2E57;
+    background: #000000;
     border-radius: 8px;
     margin-top: -30px;
 }
@@ -754,7 +754,7 @@ p {
     justify-content: space-between;
     align-items: center;
     border-radius: 8px;
-    background-color: #282437;
+    background-color: #000000;
 }
 
 .index_options {
@@ -1564,7 +1564,7 @@ tr{
 }
 
 .item_box:hover{
-    background-color: #494856;
+    background-color: #000000;
 }
 
 .vertical_selection_scroll{
@@ -1600,7 +1600,7 @@ tr{
 }
 
 .agent_box:hover, .sidebar_box:hover {
-    background-color: #494856;
+    background-color: #000000;
 }
 
 .sidebar_box{
@@ -1852,7 +1852,7 @@ tr{
 }
 
 .table_container{
-    background: #272335;
+    background: #000000;
     border-radius: 8px;
     margin-top:15px
 }
